	- Used icons to indicate the release status type on VN pages
	- Give a 'not logged in' dropdown edit box when the user isn't logged in
	- Fixed the redirects for old URLs
	- Designed a better system to handle documentation
	- Created a centralised system for site errors within the same layout
	- Wrote some more documentation

1.14 - 2008-04-26
	- Removed the ID gap prevention method
	- Moved static content to static.vndb.org (and rely on lighty for js/css
	  compression)
	- relation graphs and cover images now get an ID instead of MD5-sum
	- Added Nintendo Wii to platforms
	- Added 'hidden' flag, which should now be used instead of the delete option
	- Fixed the ordering of nodes in the relation graphs
	- Used global.pl as the central location of the PgSQL login info
	- Wrote a daemon which handles several tasks:
	  - Generation of relation graphs
	  - Generation of the sitemap.xml.gz
	  - The IRC bot
	  - scaling/compressing of cover images
	  - General maintenance
	- Fixed bug with categories not being re-selected after an error submitting
	  a new VN
	- Relation graphs are now automatically updated when a change in a related
	  release causes information in the graph to be outdated

1.13 - 2008-04-04
	- Fixed update_prev
	- Split revision insert queries into a seperate function for code reuse
	- Fixed wiki links
	- Fixed search for VN's without releases
	- Fixed bug with accepting zero-padded VNDB ID's
	- Fixed bug with V-N.net link getting lost after reverse relation update
	- Added .xml extension to AJAX requests
	- Switched to ';' seperator instead of '&' for some URL's (=cleaner)
	- Added language filter to category browser
	- Stored release dates as integers and added NOT NULL constraint
	- Used a newline to seperate multiple relations on a VN	page
	- Multi will get credits for a reverse relation edit
	- Going to an edit-page without logging in will redirect
	- Added rankings to the categories
	- Fixed automated relation graph updates
	- Added /nospam page