@@ -37,5 +37,6 @@ Misc documentation:<br />
 - Quoting sources in descriptions<br />
 - Piracy<br />
 - Spoilers<br />
+- Name order<br />
 </p>
 
