@@ -1,9 +1,18 @@
 :TITLE:About us
 :INC:index
 
+
 :SUB:Goal
 <p>
- ..
+ Our primary goal is building a large, comprehensive and up-to-date database for
+ information about all existing visual novels. VNDB aims to be a central place
+ too look up general information about the visual novels themselves, as well as
+ practical information around it, like available releases, localisations and
+ producers.<br />
+ Our secondary goal is to promote the wonderful medium called visual novels to
+ a broader audience, an audience not limited only to people who can understand
+ Japanese, but to anyone interested in literature, anime, manga or games,
+ regardless of their geographical location or cultural differences.
 </p>
 
 
@@ -15,23 +24,32 @@
 
 :SUB:Staff
 <dl>
- <dt><a href="/u2">yorhel</a></dt><dd>
-  Also known as Ayo on IRC.
- </dd><dt><a href="/u4" class="retired">hillie</a><dt><dd>
-  (retired)
+ <dt><a href="/u2">yorhel</a> <b>[a.k.a. Ayo]</b></dt><dd>
+  Founder of VNDB and still active as the main developer.
+ </dd><dt><a href="/u4" class="retired">hillie</a> <b>[retired]</b><dt><dd>
+  Responsible for beta testing of the first few versions of the site, thinking
+  of cool new features, adding the first few entries to the database and
+  moderating user submitted content.
  </dd>
 </dl>
 
 
 :SUB:Thanks
 <p>
- ..
+ Due to the sites nature as a wiki, all information in the database is added and
+ kept up-to-date by active users. I would like to thank everyone who has contributed
+ to the site, and the following users in particular:
 </p>
 <dl>
  <dt><a href="/u18">rasqual</a></dt><dd>
-  ..
+  One of the first active contributors. Added many visual novels to the
+  database when it was still a small and unknown website and gave useful
+  feedback on new features. His contributions motivated many other visitors to
+  help out as well.
  </dd><dt><a href="/u51">echomateria</a></dt><dd>
-  ..
+  Responsible for adding more than 500 visual novels in less than two months,
+  making him the largest contributor to the database. Also helped out with
+  thinking of new features and keeping the IRC channel busy.
  </dd>
 </dl>
 
